--- a/sites/all/themes/drudesk_theme/css/style.css
+++ b/sites/all/themes/drudesk_theme/css/style.css
@@ -1072,11 +1072,11 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue" !important;
   font-size: 14px;
-  line-height: 1.428571429;
-  color: #333333;
-  background-color: #ffffff;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #f1f1f1;
 }
 input,
 button,
