--- a/sites/all/themes/drudesk_theme/css/style.css
+++ b/sites/all/themes/drudesk_theme/css/style.css
@@ -9138,3 +9138,29 @@ body.navbar-tray-open.navbar-vertical.navbar-fixed {
 #navbar-administration.navbar-oriented .navbar-tray-vertical {
   width: 24rem;
 }
+
+.node-block {
+  margin: 30px;
+}
+
+.node-link-block {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+.node-link-block ul li a {
+  margin-top: 20px;
+  border-radius: 0;
+  border: 1px solid #cccccc;
+  padding: 10px;
+}
+
+.node-link-block ul li a:hover {
+  background-color: #00A6EA;
+  color: white;
+  text-decoration: none;
+}
+
+.node-title {
+  margin-left: 30px;
+}
